Fixed formatting issue in first post.

--- a/content/posts/2025-07-29.md
+++ b/content/posts/2025-07-29.md
@@ -7,7 +7,7 @@ author = 'David Gussler'
 
 ## Hello World
 
-Shrikebyte is a small, independent consulting firm focused on delivering fast FPGA and SoC systems. It consists of one employee ~yours truly~ and one very supportive wife, who this wouldn't be possible without.
+Shrikebyte is a small, independent consulting firm focused on delivering fast FPGA and SoC systems. It consists of one employee \~yours truly\~ and one very supportive wife, who this wouldn't be possible without.
 
 I'm David Gussler, an experienced FPGA design engineer, who graduated with a degree in Electrical Engineering from Purdue University in West Lafayette, Indiana. I've worked for the largest of defense contractors, three-person startups, and somewhere in-between at times throughout my career. I love chopping through bureaucracy to get difficult FPGA, embedded programming, and digital signal processing work done, and I knew that I'd be perfectly positioned to help do the same for other companies as an independent contractor. I've been fortunate enough to have a few key customers encourage me to start doing this full-time, so I took the plunge, and now here we are...
 
