Added start of project structure post.

--- a/content/posts/2025-08-11.md
+++ b/content/posts/2025-08-11.md
@@ -28,7 +28,7 @@ Today, many FPGA-centric systems significantly benefit by pairing the FPGA with 
 ## Who makes these things?
 
 * **AMD - [formerly Xilinx](https://www.reddit.com/r/FPGA/comments/sshjhv/amd_completes_acquisition_of_xilinx/)** Is a leader in the business, with over 50% marketshare as of 2025. They focus on the mid to high end market and are generally considered to have the best design tools.
-* **Alera [formerly Intel, formerly Altera](https://www.reddit.com/r/FPGA/comments/1jz6vyn/intel_sells_altera_to_private_equity_firm_for_875b/)** comes in at second behind Xilinx.
+* **Altera [formerly Intel, formerly Altera](https://www.reddit.com/r/FPGA/comments/1jz6vyn/intel_sells_altera_to_private_equity_firm_for_875b/)** comes in at second behind Xilinx.
 * **Lattice** Focuses on the lower-end of the market, targeting lower-cost lower-power applications.
 * **Microchip** has some of the best [radiation hardened](https://en.wikipedia.org/wiki/Radiation_hardening) devices on the market, making them a great choice for space-based applications.
 * Chinese and Russian knockoffs. These companies make clones of chips from the previously listed brands, sometimes the chips are even fully compatible with the name-brand development tools. I would avoid these.
