--- a/content/posts/2025-10-18.md
+++ b/content/posts/2025-10-18.md
@@ -7,15 +7,15 @@ author = 'David Gussler'
 
 ## Introduction
 
-Today I want to talk about the typical project / repository structure that I use for efficiently managing the build tools on each customer project. Every project is unique in its own way, so this structure is intentionally flexible, allowing for project-specific script edits where needed, while still being general enough to work in 99% of cases for my typical workflow. Its been slowly developed and tweaked over the years as I add new tools into the mix and make improvements to fix old shortcomings. This structure has evolved with just about every project, so I'm sure this isn't its final form, but its at a place where it works really well for me and I'm quite happy with it so I figured now was as good of a time as any to share it.
+Today I want to talk about the typical project / repository structure that I use for efficiently managing the build tools on customer projects. Every project is a bit unique in its own way, so this structure is intentionally flexible, allowing for project-specific script edits where needed, while still being general enough to work in 99% of cases for my typical workflow. Its been slowly developed and tweaked over the years as I add new tools into the mix and make improvements to fix old shortcomings. This structure has evolved with just about every project, so I'm sure this isn't its final form, but its at a place where it works really well for me and I'm quite happy with it so I figured now was as good of a time as any to share it.
 
 The plan for the next set of blog posts is to first give a general introduction to the project structure along with all of the FPGA build tools used, then follow that up with a new post for each major tool.
 
-## Requirements
+## Goals
 
-First of all I need to list the set of requirement / goals.
+First, I need to list out the goals that motivated this structure and build system.
 
-- **Focus on VHDL** There are plenty of articles out there going over the differences between VHDL and Verilog so this isn't the place to do that. Most of my work has been concentrated in the US defense industry, where VHDL is the standard. I could easily be swayed into picking up Verilog instead, but this is just one of those cases of swimming with the current and taking the path of least resistance. VHDL is a fine language and it works well for me. The ONE major feature I sorely miss that SystemVerilog has over VHDL is interfaces, so once VHDL 2019 interfaces get better tool support, I'll be a very happy guy. They're supported by the NVC simulator and by newer Vivado releases, so I hope to start experimenting with them soon. Maybe I'll make a branch of sblib-open to start playing around with them. Once GHDL support has been implemented and matured a bit I'll probably start going full-throttle with interfaces, but for now I think it's still a bit too early.
+- **Focus on VHDL** There are plenty of articles out there going over the differences between VHDL and Verilog so this isn't the place to do that. Most of my work has been concentrated in the US defense industry, where VHDL is the standard. I could easily be swayed into picking up Verilog instead, but this is just one of those cases of swimming with the current and taking the path of least resistance. VHDL is a fine language and it works well for me. The ONE major feature I sorely miss that SystemVerilog has over VHDL is interfaces, so once VHDL 2019 interfaces get better tool support, I'll be a very happy guy. They're supported by the NVC simulator and by newer Vivado releases, so I hope to start experimenting with them soon. Maybe I'll make a branch of [sblib-open]() to start playing around with them. Once GHDL support has been implemented and matured a bit I'll probably start going full-throttle with interfaces, but for now I think it's still a bit too early.
 - **Focus on Xilinx Vivado** Until I get an Altera / Lattice / Microsemi project, I'll keep the scripting focused on Vivado builds. But like I said earlier, this project structure is always evolving, so it wouldn't be too difficult to integrate other synthesis and implementation tools in the future.
 - **Support continuous integration** This is critical. Lots of "old-school" FPGA developers I know don't do this. CI is a classic example of short term pain for long term gain, especially when a project is to be managed with more of a flexible sprint approach than a waterfall approach. Without CI, you'll spend too much time manually managing different build versions, questioning yourself if "v1.1_hardware_tested_1_final.bit" or "v1.1_hardware_tested_real_final.bit" was the right bitstream to release, and being afraid to touch an existing design because "its already been hardware validated". Without CI, small changes to existing designs can become really painful. CI helps you trust your code and gives you confidence while incrementally updating designs.
 - **Support single command builds** For example - all it takes to go from source to compiled release is running `make all` from the project root.
@@ -29,11 +29,107 @@ First of all I need to list the set of requirement / goals.
 - **Should support Vivado project mode rather than non-project mode** There are people who swear by non-project mode, and I'm sure it works great for them, but just about every "non-hardcore" FPGA developer I've met expects project mode, and may not even know what non-project mode is. So I think a good middle ground is to use project mode and script the project creation. This makes things more accessible, lets developers enjoy the benefits of project mode, while also keeping everything fully scrutable.
 - **Code style should be automatically checked as part of CI** While working on a team, code reviews help developers learn from each other while also keeping everyone accountable. If you know someone else is going to be scrutinizing your code, you'll probably be more likely to produce something of higher quality.Code style is one of those things that should be taken care of before the manual review even happens because style rules can be strictly defend in such a way that they should be automatically checkable by a tool. This gives developers more room during a code review to look for *real* logical issues rather than being distracted by simple style problems.
 - **Control / status registers should be generated by a tool** Control and status registers are the main interface between the FPGA and the software that controls the FPGA. one of the most boring, time-consuming, and error-prone processes in FPGA development used to be manually maintaining HDL control / status registers, documentation, and software for those registers. Since the HDL, documentation, and the software interface are essentially just different representations of the exact same register information, this is one of those cases where it makes sense to use code generation.
+- **There should be a clear boundary between source files and built files** I've never liked working with projects that generate files all over the place because this can make it difficult to determine what needs to be checked in to source control and what can be safely deleted between builds.
+- **Semantic versioning should be used with respect the the software register interface** This helps software developers that depend on your FPGA design understand how changes between FPGA versions will affect their software.
 
 ## The Tools
 
-I've picked up lots of great, mainly open-source, build tools over the years to satisfy the requirements outlined above. I'll list them out here, but I won't go into details yet. I'll dedicate a future post to each tool and update the links in this post once those future articles have been written.
+I've picked up lots of great, mainly open-source, build tools over the years to satisfy some the goals outlined above. I'll list them out here, but I won't go into details yet. I'll dedicate a future post to each tool and update the links in this post once those future articles have been written.
+
+- **[VHDL Style Guide]()** For automated code style checking
+- **[VUnit]()** For simulator abstraction, simulation scripting, and a high-quality verification library
+- **[HDL Registers]()** For VHDL register generation
+- **[GHDL]()** For VHDL simulation
+- **[vhdl_ls]()** For a VHDL language server
+- **[Vivado]()** of course, for synthesis and implementation
 
 ## The Structure
 
-Now that I've outlined all of the major goals of the project structure and listed the tools I use within that structure, I'll now walk through a typical project outline. As a reference, I've created the [fpga_template]() repo, so feel free to clone that to follow along and tweak it for your own purposes. Or even send an email to `david@shrikebyte.com` if you want to talk about the template with me.
+Now that I've outlined all of the major goals of the project structure and listed the tools I use within that structure, I'll walk through the project outline. As a reference, I've created the [fpga_template]() repo, so feel free to clone that to follow along and tweak it for your own purposes. Or even send an email to `david@shrikebyte.com` if you want to talk about the template.
+
+Here is the output of `tree -L 3` from `fpga_template` root directory after cloning the project and running `make all`
+
+```
+├── build
+│   ├── regs_out
+│   │   ├── adder
+│   │   ├── gpio
+│   │   └── stdver
+│   ├── sim_report.xml
+│   ├── template_fpga_v0.1.0-basys3
+│   │   ├── template_fpga_v0.1.0-basys3.bit
+│   │   ├── template_fpga_v0.1.0-basys3_build_info.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_cdc.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_clock_interaction.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_impl.log
+│   │   ├── template_fpga_v0.1.0-basys3_io.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_methodology.rpt
+│   │   ├── template_fpga_v0.1.0-basys3.mmi
+│   │   ├── template_fpga_v0.1.0-basys3_power.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_synth.log
+│   │   ├── template_fpga_v0.1.0-basys3_timing.rpt
+│   │   ├── template_fpga_v0.1.0-basys3_util.rpt
+│   │   └── template_fpga_v0.1.0-basys3.xsa
+│   ├── template_fpga_v0.1.0-basys3.tar.gz
+│   ├── template_fpga_v0.1.0-genesys-zu5ev
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev.bit
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_build_info.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_cdc.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_clock_interaction.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_impl.log
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_io.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_methodology.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_power.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_synth.log
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_timing.rpt
+│   │   ├── template_fpga_v0.1.0-genesys-zu5ev_util.rpt
+│   │   └── template_fpga_v0.1.0-genesys-zu5ev.xsa
+│   ├── template_fpga_v0.1.0-genesys-zu5ev.tar.gz
+│   └── vivado_out
+│       ├── template_fpga_basys3
+│       └── template_fpga_genesys-zu5ev
+├── CHANGELOG.md
+├── doc
+│   ├── diagrams.drawio
+│   ├── requirements.md
+│   └── user_guide.md
+├── .gitignore
+├── lib
+│   └── sblib-open
+│       ├── CHANGELOG.md
+│       ├── doc
+│       ├── LICENSE
+│       ├── Makefile
+│       ├── README.md
+│       ├── src
+│       ├── test
+│       ├── tools
+│       └── vhdl_ls.toml
+├── Makefile
+├── platforms
+│   ├── basys3
+│   │   ├── cnstr
+│   │   ├── hdl
+│   │   ├── ip
+│   │   └── platform.mk
+│   └── genesys-zu5ev
+│       ├── cnstr
+│       ├── hdl
+│       ├── ip
+│       └── platform.mk
+├── README.md
+├── src
+│   └── adder
+│       ├── hdl
+│       └── regs
+├── test
+│   └── adder
+│       └── adder_tb.vhd
+├── tools
+│   ├── build.tcl
+│   ├── proj.tcl
+│   ├── regs.py
+│   ├── sim.py
+│   └── vsg_rules.yaml
+└── vhdl_ls.toml
+```
