Finished initial draft of fpga tools and project structure post.

--- a/content/posts/2025-10-19.md
+++ b/content/posts/2025-10-19.md
@@ -1,6 +1,6 @@
 +++
 date = '2025-10-19'
-draft = true
+draft = false
 title = 'The Ultimate FPGA Build System'
 author = 'David Gussler'
 +++
@@ -150,4 +150,18 @@ Lets start at the top and work our way down:
 - `Makefile` This has all the major build commands for each project. The usual ones are:
   - `make all` to fully build all platforms from a freshly checked out repo.
   - `make sim` to run the self-checking simulations
-  - `make style-fix` to reformat the entire hdl codebase to match the expected style guidelines
+  - `make style-fix` to reformat the entire hdl codebase to conform to the expected style guidelines.
+- `platforms` Has the platform-specific source and configuration files.
+- `README.md` Should have general info on the project, including explicitly listing tool dependencies and build instructions.
+- `src` Has source files that are common among all the platforms. Each major module should have its own subdirectory in src. Then each module subdirectory is further divided using the following directories:
+  - `cnstr` for constraints
+  - `hdl` for vhdl and or verilog source code
+  - `ip` for tcl scripts to regenerate IPs and or IP-Integrator block designs. NEVER use an ip.xpr file to store an IP, and ALWAYS use a tcl script to regenerate it. Block design scrips can be created from the Vivado TCL commandline using `write_bd_tcl` and IP scripts can be created using `write_ip_tcl`.
+  - `regs` for register definition files that are passed to the register generator tool.
+- `test` keeps the VUnit testbenches for each project submodule.
+- `tools` holds the project scripts for the various build tools. We'll analyze these scripts in further detail in future posts when I write about individual tools.
+- `vhdl_ls.toml` lists the vhdl source files that should be included for analysis by the language server.
+
+## Conclusion
+
+Today we've taken a look at the project structure and tools that I like to use to help bring some order to the chaos that is FPGA development. It tries to adopt modern software standards for continuous improvement and tries to make full use of the awesome freely available open-source FPGA automation tools.
