--- a/content/posts/2025-10-19.md
+++ b/content/posts/2025-10-19.md
@@ -1,21 +1,19 @@
 +++
 date = '2025-10-19'
 draft = false
-title = 'The Ultimate FPGA Build System'
+title = 'The Ultimate FPGA Project Structure and Build System'
 author = 'David Gussler'
 +++
 
 ## Introduction
 
-Today I want to talk about the typical project / repository structure that I use for efficiently managing the build tools on customer projects. Every project is a bit unique in its own way, so this structure is intentionally flexible, allowing for project-specific script edits where needed, while still being general enough to work in 99% of cases for my usual workflow. Its been slowly developed and tweaked over the years as I add new tools into the mix and make improvements to fix old shortcomings. This structure has evolved with just about every project, so I'm sure this isn't its final form, but its at a place where it works really well for me and I'm quite happy with it so I figured now was as good of a time as any to share it.
-
-The plan for the next set of posts is to first give a general introduction to the project structure along with all of the FPGA build tools used, then follow that up with a new post for each major tool.
+Today I want to talk about the typical project / repository structure that I use for efficiently managing the build tools on customer projects. Every project is a bit unique in its own way, so this structure is intentionally flexible, allowing for project-specific script edits where needed, while still being general enough to work in 99% of cases for my usual workflow. Its been slowly developed and tweaked over the years as I add new tools into the mix and make improvements to fix old shortcomings. This structure has evolved with just about every project, so I'm sure this isn't its final form, but its at a place where I'm happy enough with it to share it.
 
 ## Goals
 
-First, I need to list out the goals that motivated this structure and build system.
+First, I'll list out the goals that motivated this structure, set of tools, and build system.
 
-- **Focus on VHDL** There are plenty of articles out there that go over the differences between VHDL and Verilog so this isn't the place to do that. Most of my work has been concentrated in the US defense industry, where VHDL is the standard. I could easily be swayed into picking up Verilog instead, but this is just one of those cases of swimming with the current and taking the path of least resistance. VHDL is a fine language and it works well for me. The ONE major feature I sorely miss that SystemVerilog has over VHDL is interfaces, so once VHDL 2019 interfaces get better tool support, I'll be a very happy guy. They're supported by the NVC simulator and by newer Vivado releases, so I hope to start experimenting with them soon. Maybe I'll make a branch of [sblib-open](https://github.com/shrikebyte/sblib-open) to start playing around with them. Once GHDL support has been implemented and matured a bit I'll probably start going full-throttle with interfaces, but for now I think it's still a bit too early.
+- **Focus on VHDL** There are plenty of articles out there that go over the differences between VHDL and Verilog so this isn't the place to do that. Most of my work has been concentrated in the US defense industry, where VHDL is the standard. I could easily be swayed into picking up Verilog instead, but this is just one of those cases of swimming with the current and taking the path of least resistance. VHDL is a fine language and it works well for me. The ONE major feature I sorely miss that SystemVerilog has over VHDL is interfaces, so once VHDL 2019 interfaces get better tool support, I'll be a very happy guy. They're supported by the [NVC simulator](https://github.com/nickg/nvc) and by newer Vivado releases, so I hope to start experimenting with them soon. Maybe I'll make a branch of [sblib-open](https://github.com/shrikebyte/sblib-open) to start playing around with them. Once [GHDL](https://github.com/ghdl/ghdl) support has been implemented and matured a bit I'll probably start going full-throttle with interfaces, but for now I think it's still a bit too early.
 - **Focus on Xilinx Vivado** Until I get an Altera / Lattice / Microsemi project, I'll keep the scripting focused on Vivado builds. But like I said earlier, this project structure is always evolving, so it wouldn't be too difficult to integrate other synthesis and implementation scripts in the future.
 - **Support continuous integration** This is critical. CI is a classic example of short term pain for long term gain, especially when a project is to be managed with more of a flexible sprint approach than a waterfall approach. Without CI, you'll spend too much time manually managing different build versions, questioning yourself if "v1.1_hardware_tested_1_final.bit" or "v1.1_hardware_tested_real_final.bit" was the right bitstream to release, and being afraid to touch an existing design because "its already been hardware validated". Without CI, small changes to existing designs can become really painful. CI helps you trust your code and gives you confidence while incrementally updating designs.
 - **Support single command builds** For example - all it takes to go from source to compiled release is running `make all` from the project root.
@@ -34,7 +32,7 @@ First, I need to list out the goals that motivated this structure and build syst
 
 ## The Tools
 
-I've picked up lots of great, mainly open-source, build tools over the years to satisfy some the goals outlined above. I'll list them out here, but I won't go into details yet. I'll dedicate a future post to each tool and update the links in this post once those future articles have been written.
+I've picked up lots of great, mainly open-source, build tools over the years to satisfy some the goals outlined above.
 
 - **[VHDL Style Guide](https://vhdl-style-guide.readthedocs.io/en/latest/)** For automated code style checking
 - **[VUnit](https://vunit.github.io/)** For simulator abstraction, simulation scripting, and a high-quality verification library
@@ -42,7 +40,7 @@ I've picked up lots of great, mainly open-source, build tools over the years to 
 - **[GHDL](https://ghdl.github.io/ghdl/about.html)** For VHDL simulation
 - **[vhdl_ls](https://github.com/VHDL-LS/rust_hdl)** For a VHDL language server
 - **[Vivado](https://www.amd.com/en/products/software/adaptive-socs-and-fpgas/vivado.html)** For synthesis and implementation
-- **[Github Actions](https://github.com/features/actions)** For CI scripting
+- **[Github Actions](https://github.com/features/actions)** For CI scripting.
 
 ## The Structure
 
@@ -159,9 +157,9 @@ Lets start at the top and work our way down:
   - `ip` for tcl scripts to regenerate IPs and or IP-Integrator block designs. NEVER use an ip.xpr file to store an IP, and ALWAYS use a tcl script to regenerate it. Block design scrips can be created from the Vivado TCL commandline using `write_bd_tcl` and IP scripts can be created using `write_ip_tcl`.
   - `regs` for register definition files that are passed to the register generator tool.
 - `test` keeps the VUnit testbenches for each project submodule.
-- `tools` holds the project scripts for the various build tools. We'll analyze these scripts in further detail in future posts when I write about individual tools.
+- `tools` holds project scripts for the build tools.
 - `vhdl_ls.toml` lists the vhdl source files that should be included for analysis by the language server.
 
 ## Conclusion
 
-Today we've taken a look at the project structure and tools that I like to use to help bring some order to the chaos that is FPGA development. It tries to adopt modern software standards for continuous improvement and tries to make full use of the awesome freely available open-source FPGA automation tools.
+Today we've taken a look at the project structure and tools that I like to use as part of my FPGA development and maintenance process. In it, I tried to adopt modern software standards for continuous improvement while also making full use of awesome freely available open-source FPGA automation tools.
